Added fsGroup to crd-install job
Signed-off-by: Marcus Noble <github@marcusnoble.co.uk>

--- a/helm/cluster-api/templates/crd-install/crd-job.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-job.yaml
@@ -23,6 +23,7 @@ spec:
       securityContext:
         runAsUser: 65534
         runAsGroup: 65534
+        fsGroup: 0
       tolerations:
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
