--- a/helm/cluster-api/templates/crd-install/crd-psp.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-psp.yaml
@@ -14,23 +14,17 @@ metadata:
 spec:
   privileged: false
   runAsUser:
-    rule: MustRunAsNonRoot
+    rule: RunAsAny
   seLinux:
     rule: RunAsAny
   supplementalGroups:
-    rule: 'MustRunAs'
-    ranges:
-      - min: 1
-        max: 65535
+    rule: 'RunAsAny'
   volumes:
   - 'configMap'
   hostPID: false
   hostIPC: false
   hostNetwork: false
   fsGroup:
-    rule: 'MustRunAs'
-    ranges:
-      - min: 1
-        max: 65535
+    rule: 'RunAsAny'
   readOnlyRootFilesystem: false
 {{- end }}
