Ensure old v1alpha2 versions are removed from status first
Signed-off-by: Marcus Noble <github@marcusnoble.co.uk>

--- a/helm/cluster-api/templates/crd-install/crd-job.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-job.yaml
@@ -35,6 +35,11 @@ spec:
         - |
           set -o errexit ; set -o xtrace ; set -o nounset
 
+          for crd in $(kubectl get crds -o json | jq -r '.items[] | select(.metadata.name | test("cluster.x-k8s.io")) | select(.status.storedVersions | index("v1alpha2")) | .metadata.name'); do
+            index=$(kubectl get crds ${crd} -o json | jq -r '.status.storedVersions | index("v1alpha2")')
+            kubectl patch crd ${crd} --type=json --subresource='status' -p="[{\"op\":\"remove\", \"path\":\"/status/storedVersions/${index}\"}]"
+          done
+
           # piping stderr to stdout means kubectl's errors are surfaced
           # in the pod's logs.
 
