--- a/helm/cluster-api/templates/crd-install/crd-rbac.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-rbac.yaml
@@ -29,6 +29,15 @@ rules:
   - delete
   - get
   - patch
+  - list
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions/status
+  verbs:
+  - get
+  - patch
+  - list
 - apiGroups:
   - policy
   resources:
