Use 'kubectl' retagged container image

--- a/helm/cluster-api/templates/crd-install/crd-job.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-job.yaml
@@ -28,7 +28,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: kubectl
-        image: "{{ .Values.images.domain }}/giantswarm/docker-kubectl:1.24.2"
+        image: "{{ .Values.images.domain }}/giantswarm/kubectl:1.24.2"
         command:
         - sh
         - -c
