Put flags in ./config

--- a/config/helm/deployment-args.yaml
+++ b/config/helm/deployment-args.yaml
@@ -27,7 +27,7 @@ spec:
         - name: manager
           args:
             - --metrics-bind-addr=0.0.0.0:8080
-            - --feature-gates=MachinePool=true
+            - --feature-gates=MachinePool=true,KubeadmBootstrapFormatIgnition=true
             - --watch-filter={{ .Values.watchFilter }}
             - --v=0
 
@@ -44,6 +44,6 @@ spec:
         - name: manager
           args:
             - --metrics-bind-addr=0.0.0.0:8080
-            - --feature-gates=ClusterTopology=true
+            - --feature-gates=ClusterTopology=true,KubeadmBootstrapFormatIgnition=true
             - --watch-filter={{ .Values.watchFilter }}
             - --v=0
