--- a/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha3/clusters.cluster.x-k8s.io.yaml
@@ -85,6 +85,7 @@
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+              x-kubernetes-map-type: atomic
             infrastructureRef:
               description: InfrastructureRef is a reference to a provider-specific resource that holds the details for provisioning infrastructure for a cluster in said provider.
               properties:
@@ -110,6 +111,7 @@
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+              x-kubernetes-map-type: atomic
             paused:
               description: Paused can be used to prevent controllers from processing the Cluster and all its associated objects.
               type: boolean
