--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machines.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machines.cluster.x-k8s.io.yaml
@@ -43,6 +43,7 @@
                       description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                       type: string
                   type: object
+                  x-kubernetes-map-type: atomic
                 dataSecretName:
                   description: DataSecretName is the name of the secret that stores the bootstrap data script. If nil, the Machine should remain in the Pending state.
                   type: string
@@ -79,6 +80,7 @@
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+              x-kubernetes-map-type: atomic
             nodeDrainTimeout:
               description: 'NodeDrainTimeout is the total amount of time that the controller will spend on draining a node. The default value is 0, meaning that the node can be drained without any time limitations. NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`'
               type: string
@@ -167,7 +169,7 @@
                   description: Boot ID reported by the node.
                   type: string
                 containerRuntimeVersion:
-                  description: ContainerRuntime Version reported by the node through runtime remote API (e.g. docker://1.5.0).
+                  description: ContainerRuntime Version reported by the node through runtime remote API (e.g. containerd://1.4.2).
                   type: string
                 kernelVersion:
                   description: Kernel Version reported by the node from 'uname -r' (e.g. 3.16.0-0.bpo.4-amd64).
@@ -227,6 +229,7 @@
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+              x-kubernetes-map-type: atomic
             observedGeneration:
               description: ObservedGeneration is the latest generation observed by the controller.
               format: int64
