--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
@@ -14,6 +14,14 @@ metadata:
   name: capi-manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - addons.cluster.x-k8s.io
   resources:
   - '*'
@@ -289,4 +297,23 @@ rules:
   - get
   - list
   - patch
+  - watch
+- apiGroups:
+  - ipam.cluster.x-k8s.io
+  resources:
+  - ipaddressclaims
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - runtime.cluster.x-k8s.io
+  resources:
+  - extensionconfigs
+  - extensionconfigs/status
+  verbs:
+  - get
+  - list
+  - patch
+  - update
   - watch
