--- a/helm/cluster-api/files/controlplane/patches/versions/v1alpha3/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/controlplane/patches/versions/v1alpha3/kubeadmcontrolplanes.controlplane.cluster.x-k8s.io.yaml
@@ -40,6 +40,7 @@
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+              x-kubernetes-map-type: atomic
             kubeadmConfigSpec:
               description: KubeadmConfigSpec is a KubeadmConfigSpec to use for initializing and joining machines to the control plane.
               properties:
