--- a/helm/cluster-api/files/core/bases/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/bases/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
@@ -13,7 +13,7 @@ metadata:
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/provider: cluster-api
     helm.sh/chart: cluster-api
-  name: clusterresourcesetbindings.addons.cluster.x-k8s.io
+  name: ipaddressclaims.ipam.cluster.x-k8s.io
 spec:
   conversion:
     strategy: Webhook
@@ -28,39 +28,26 @@ spec:
       conversionReviewVersions:
         - v1
         - v1beta1
-  group: addons.cluster.x-k8s.io
+  group: ipam.cluster.x-k8s.io
   names:
     categories:
       - cluster-api
-    kind: ClusterResourceSetBinding
-    listKind: ClusterResourceSetBindingList
-    plural: clusterresourcesetbindings
-    singular: clusterresourcesetbinding
+    kind: IPAddressClaim
+    listKind: IPAddressClaimList
+    plural: ipaddressclaims
+    singular: ipaddressclaim
   scope: Namespaced
   versions:
-    - name: v1alpha3
-      schema: {}
-      served: true
-      storage: false
-      subresources:
-        status: {}
     - additionalPrinterColumns:
-        - description: Time duration since creation of ClusterResourceSetBinding
-          jsonPath: .metadata.creationTimestamp
-          name: Age
-          type: date
-      name: v1alpha4
-      schema: {}
-      served: true
-      storage: false
-      subresources:
-        status: {}
-    - additionalPrinterColumns:
-        - description: Time duration since creation of ClusterResourceSetBinding
-          jsonPath: .metadata.creationTimestamp
-          name: Age
-          type: date
-      name: v1beta1
+        - description: Name of the pool to allocate an address from
+          jsonPath: .spec.poolRef.name
+          name: Pool Name
+          type: string
+        - description: Kind of the pool to allocate an address from
+          jsonPath: .spec.poolRef.kind
+          name: Pool Kind
+          type: string
+      name: v1alpha1
       schema: {}
       served: true
       storage: true
