--- a/helm/cluster-api/files/core/kustomization.yaml
+++ b/helm/cluster-api/files/core/kustomization.yaml
@@ -3,6 +3,9 @@ resources:
   - bases/clusterresourcesetbindings.addons.cluster.x-k8s.io.yaml
   - bases/clusterresourcesets.addons.cluster.x-k8s.io.yaml
   - bases/clusters.cluster.x-k8s.io.yaml
+  - bases/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+  - bases/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+  - bases/ipaddresses.ipam.cluster.x-k8s.io.yaml
   - bases/machinedeployments.cluster.x-k8s.io.yaml
   - bases/machinehealthchecks.cluster.x-k8s.io.yaml
   - bases/machinepools.cluster.x-k8s.io.yaml
@@ -75,6 +78,24 @@ patches:
       version: v1
       kind: CustomResourceDefinition
       name: clusters.cluster.x-k8s.io
+  - path: patches/versions/v1alpha1/extensionconfigs.runtime.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: extensionconfigs.runtime.cluster.x-k8s.io
+  - path: patches/versions/v1alpha1/ipaddressclaims.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddressclaims.ipam.cluster.x-k8s.io
+  - path: patches/versions/v1alpha1/ipaddresses.ipam.cluster.x-k8s.io.yaml
+    target:
+      group: apiextensions.k8s.io
+      version: v1
+      kind: CustomResourceDefinition
+      name: ipaddresses.ipam.cluster.x-k8s.io
   - path: patches/versions/v1alpha3/machinedeployments.cluster.x-k8s.io.yaml
     target:
       group: apiextensions.k8s.io
