--- a/helm/cluster-api/files/core/patches/versions/v1alpha4/machinedeployments.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1alpha4/machinedeployments.cluster.x-k8s.io.yaml
@@ -69,6 +69,7 @@
                   description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
                   type: object
               type: object
+              x-kubernetes-map-type: atomic
             strategy:
               description: The deployment strategy to use to replace existing machines with new ones.
               properties:
@@ -150,6 +151,7 @@
                               description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                               type: string
                           type: object
+                          x-kubernetes-map-type: atomic
                         dataSecretName:
                           description: DataSecretName is the name of the secret that stores the bootstrap data script. If nil, the Machine should remain in the Pending state.
                           type: string
@@ -186,6 +188,7 @@
                           description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                           type: string
                       type: object
+                      x-kubernetes-map-type: atomic
                     nodeDrainTimeout:
                       description: 'NodeDrainTimeout is the total amount of time that the controller will spend on draining a node. The default value is 0, meaning that the node can be drained without any time limitations. NOTE: NodeDrainTimeout is different from `kubectl drain --timeout`'
                       type: string
