--- a/helm/cluster-api/files/core/patches/versions/v1beta1/clusterclasses.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/clusterclasses.cluster.x-k8s.io.yaml
@@ -55,6 +55,7 @@
                           description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                           type: string
                       type: object
+                      x-kubernetes-map-type: atomic
                     unhealthyConditions:
                       description: UnhealthyConditions contains a list of the conditions that determine whether a node is considered unhealthy. The conditions are combined in a logical OR, i.e. if any of the conditions is met, the node is unhealthy.
                       items:
@@ -106,6 +107,7 @@
                           description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                           type: string
                       type: object
+                      x-kubernetes-map-type: atomic
                   required:
                     - ref
                   type: object
@@ -148,6 +150,7 @@
                       description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                       type: string
                   type: object
+                  x-kubernetes-map-type: atomic
               required:
                 - ref
               type: object
@@ -179,6 +182,7 @@
                       description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                       type: string
                   type: object
+                  x-kubernetes-map-type: atomic
               required:
                 - ref
               type: object
@@ -188,7 +192,7 @@
                 description: ClusterClassPatch defines a patch which is applied to customize the referenced templates.
                 properties:
                   definitions:
-                    description: 'Definitions define the patches inline. Note: Patches will be applied in the order of the array.'
+                    description: 'Definitions define inline patches. Note: Patches will be applied in the order of the array. Note: Exactly one of Definitions or External must be set.'
                     items:
                       description: PatchDefinition defines a patch which is applied to customize the referenced templates.
                       properties:
@@ -265,11 +269,20 @@
                   enabledIf:
                     description: EnabledIf is a Go template to be used to calculate if a patch should be enabled. It can reference variables defined in .spec.variables and builtin variables. The patch will be enabled if the template evaluates to `true`, otherwise it will be disabled. If EnabledIf is not set, the patch will be enabled per default.
                     type: string
+                  external:
+                    description: 'External defines an external patch. Note: Exactly one of Definitions or External must be set.'
+                    properties:
+                      generateExtension:
+                        description: GenerateExtension references an extension which is called to generate patches.
+                        type: string
+                      validateExtension:
+                        description: ValidateExtension references an extension which is called to validate the topology.
+                        type: string
+                    type: object
                   name:
                     description: Name of the patch.
                     type: string
                 required:
-                  - definitions
                   - name
                 type: object
               type: array
@@ -290,6 +303,9 @@
                       openAPIV3Schema:
                         description: OpenAPIV3Schema defines the schema of a variable via OpenAPI v3 schema. The schema is a subset of the schema used in Kubernetes CRDs.
                         properties:
+                          additionalProperties:
+                            description: 'AdditionalProperties specifies the schema of values in a map (keys are always strings). NOTE: Can only be set if type is object. NOTE: AdditionalProperties is mutually exclusive with Properties. NOTE: This field uses PreserveUnknownFields and Schemaless, because recursive validation is not possible.'
+                            x-kubernetes-preserve-unknown-fields: true
                           default:
                             description: 'Default is the default value of the variable. NOTE: Can be set for all types.'
                             x-kubernetes-preserve-unknown-fields: true
@@ -344,7 +360,7 @@
                             description: 'Pattern is the regex which a string variable must match. NOTE: Can only be set if type is string.'
                             type: string
                           properties:
-                            description: 'Properties specifies fields of an object. NOTE: Can only be set if type is object. NOTE: This field uses PreserveUnknownFields and Schemaless, because recursive validation is not possible.'
+                            description: 'Properties specifies fields of an object. NOTE: Can only be set if type is object. NOTE: Properties is mutually exclusive with AdditionalProperties. NOTE: This field uses PreserveUnknownFields and Schemaless, because recursive validation is not possible.'
                             x-kubernetes-preserve-unknown-fields: true
                           required:
                             description: 'Required specifies which fields of an object are required. NOTE: Can only be set if type is object.'
@@ -417,6 +433,7 @@
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                            x-kubernetes-map-type: atomic
                           unhealthyConditions:
                             description: UnhealthyConditions contains a list of the conditions that determine whether a node is considered unhealthy. The conditions are combined in a logical OR, i.e. if any of the conditions is met, the node is unhealthy.
                             items:
@@ -471,6 +488,7 @@
                                     description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                     type: string
                                 type: object
+                                x-kubernetes-map-type: atomic
                             required:
                               - ref
                             type: object
@@ -502,6 +520,7 @@
                                     description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                     type: string
                                 type: object
+                                x-kubernetes-map-type: atomic
                             required:
                               - ref
                             type: object
