Add clusterctl labels to CRDs to support `clusterctl move`

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -46,6 +46,18 @@ patches:
     target:
       kind: CustomResourceDefinition
       labelSelector: cluster.x-k8s.io/provider=control-plane-kubeadm
+  - path: crd_clusterctl_labels.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=cluster-api
+  - path: crd_clusterctl_labels.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=bootstrap-kubeadm
+  - path: crd_clusterctl_labels.yaml
+    target:
+      kind: CustomResourceDefinition
+      labelSelector: cluster.x-k8s.io/provider=control-plane-kubeadm
   - path: crd_core_webhook.yaml
     target:
       kind: CustomResourceDefinition
