--- a/helm/cluster-api/files/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/bootstrap/bases/kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io.yaml
@@ -15,6 +15,8 @@ metadata:
     cluster.x-k8s.io/v1alpha3: v1alpha3
     cluster.x-k8s.io/v1alpha4: v1alpha4
     cluster.x-k8s.io/v1beta1: v1beta1
+    clusterctl.cluster.x-k8s.io: ""
+    clusterctl.cluster.x-k8s.io/move: ""
     helm.sh/chart: cluster-api
   name: kubeadmconfigtemplates.bootstrap.cluster.x-k8s.io
 spec:
