Add instructions on how to upgrade the app

--- a/config/helm/webhook-certificate.yaml
+++ b/config/helm/webhook-certificate.yaml
@@ -33,3 +33,10 @@ metadata:
   name: capi-kubeadm-bootstrap-validating-webhook-configuration
   annotations:
     cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-kubeadm-bootstrap-serving-cert'
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: capi-kubeadm-bootstrap-mutating-webhook-configuration
+  annotations:
+    cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-kubeadm-bootstrap-serving-cert'
