--- a/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-kubeadm-bootstrap-mutating-webhook-configuration.yaml
+++ b/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-kubeadm-bootstrap-mutating-webhook-configuration.yaml
@@ -2,7 +2,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: capi-kubeadm-bootstrap-system/capi-kubeadm-bootstrap-serving-cert
+    cert-manager.io/inject-ca-from: '{{ .Release.Namespace }}/capi-kubeadm-bootstrap-serving-cert'
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
