--- a/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-controller-manager.yaml
@@ -47,7 +47,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.uid
-        image: '{{.Values.images.domain}}/{{.Values.images.core.name}}:{{.Values.images.tag}}'
+        image: '{{.Values.images.domain}}/{{.Values.images.core.name}}:{{.Values.images.core.tag | default .Values.images.tag}}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
